--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.2",
     "react": "^18.2.0",
+    "react-cv": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
