--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@react-pdf/renderer": "^3.4.2",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-cv": "^1.6.0",
     "react-dom": "^18.2.0",
